--- a/css/global.css
+++ b/css/global.css
@@ -24,13 +24,17 @@
   align-items: center;
   justify-content: space-between;
   z-index: 10;
+  a {
+    text-decoration: none;
+    padding: 1rem;
+  }
 }
 
 .logo {
   padding-left: 4rem;
   display: flex;
   align-items: center;
-  gap: 2rem;
+  gap: 0rem;
 }
 .logo img {
   width: 6.7rem;
@@ -45,8 +49,8 @@
 .nav-list {
   display: flex;
   z-index: 10001;
-  gap: 3rem;
-  margin-right: -20rem;
+  gap: 2rem;
+  margin-right: -10rem;
 }
 
 .nav-list li {
@@ -168,6 +172,14 @@
   background-color: rgb(175, 175, 175);
 }
 /*------------------------------------------responsive--------------------------------------------------------------------*/
+/*------------------------------------------responsive--------------------------------------------------------------------*/
+/*------------------------------------------responsive--------------------------------------------------------------------*/
+/*------------------------------------------responsive--------------------------------------------------------------------*/
+/*------------------------------------------responsive--------------------------------------------------------------------*/
+/*------------------------------------------responsive--------------------------------------------------------------------*/
+/*------------------------------------------responsive--------------------------------------------------------------------*/
+/*------------------------------------------responsive--------------------------------------------------------------------*/
+/*------------------------------------------responsive--------------------------------------------------------------------*/
 
 @media (max-width: 1200px) {
   .navbar {
@@ -175,6 +187,9 @@
     left: 0;
     width: 100%;
     height: 4rem;
+    a {
+      padding: 0rem;
+    }
   }
 
   .logo {
@@ -204,7 +219,7 @@
     margin-left: 0px;
     position: fixed;
     top: 4.7rem;
-    right: 20rem;
+    right: 10rem;
     width: 250px;
     border-radius: 0 0 20px 20px;
     background-color: rgba(7, 7, 7, 0.829);
